--- a/src/app/spotting/spotting-main/spotting-main.component.scss
+++ b/src/app/spotting/spotting-main/spotting-main.component.scss
@@ -1,19 +1,24 @@
 @import "~ng-devui/styles-var/devui-var.scss";
 
-.spotting-main-container {
-    margin: 2.5%;
-    position: relative;
+.button-container {
+    display: flex;
 }
 
 .spotting-form-button {
-    position: absolute;
-    right: 0%;
-    top: 0%;
+    margin-left: auto;
+    margin-right: 2%;
+    margin-top: 30px;
     z-index: 10;
 }
 
 .spotting-table-container {
-    position: absolute;
+}
+
+.spotting-main-container {
+    margin-top: 0px;
+    margin-bottom: 50px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
 .spotting-table-elem {
